Small change in comparison notebook

--- a/meta/hypoperfusion_ratio/RAPID_comparison.ipynb
+++ b/meta/hypoperfusion_ratio/RAPID_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -31,13 +31,12 @@
     "                                     sheet_name='volumes_ml')\n",
     "RAPID_volumes_df = pd.read_excel('/Users/julian/stroke_research/perfusion_volumes/RAPID_volumes.xlsx')\n",
     "\n",
-    "perfusion_volumes_df = perfusion_volumes_df.merge(RAPID_volumes_df, left_on='subject_id', right_on='anonymised_id')\n",
-    "perfusion_volumes_df = perfusion_volumes_df.drop(columns=['Nom', 'Prénom', 'patient_identifier'])\n"
+    "perfusion_volumes_df = perfusion_volumes_df.merge(RAPID_volumes_df, left_on='subject_id', right_on='anonymised_id')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -83,8 +82,8 @@
       "Dep. Variable:           ground_truth   R-squared:                       0.432\n",
       "Model:                            OLS   Adj. R-squared:                  0.428\n",
       "Method:                 Least Squares   F-statistic:                     107.1\n",
-      "Date:                Sat, 04 Apr 2020   Prob (F-statistic):           5.08e-19\n",
-      "Time:                        23:45:15   Log-Likelihood:                -688.04\n",
+      "Date:                Sun, 05 Apr 2020   Prob (F-statistic):           5.08e-19\n",
+      "Time:                        10:48:48   Log-Likelihood:                -688.04\n",
       "No. Observations:                 143   AIC:                             1380.\n",
       "Df Residuals:                     141   BIC:                             1386.\n",
       "Df Model:                           1                                         \n",
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -136,8 +135,8 @@
       "Dep. Variable:           ground_truth   R-squared:                       0.290\n",
       "Model:                            OLS   Adj. R-squared:                  0.285\n",
       "Method:                 Least Squares   F-statistic:                     57.52\n",
-      "Date:                Sat, 04 Apr 2020   Prob (F-statistic):           4.10e-12\n",
-      "Time:                        23:47:30   Log-Likelihood:                -703.98\n",
+      "Date:                Sun, 05 Apr 2020   Prob (F-statistic):           4.10e-12\n",
+      "Time:                        10:48:48   Log-Likelihood:                -703.98\n",
       "No. Observations:                 143   AIC:                             1412.\n",
       "Df Residuals:                     141   BIC:                             1418.\n",
       "Df Model:                           1                                         \n",
